. [FIX] LabelAtlas: Honors the directory of the .plist file when loading the .png file
. [FIX] LabelBMFont: Does not crash if it can't parse the FNT. Instead it logs an error and return nil
. [FIX] LabelTTF: It is possible to set an empty string
. [FIX] Layer: LayerColor uses correct default blending function (issues #1422 #1423)
. [FIX] Templates: Autoration can be overriden in runtime on iOS 6
		Fixed some grammar errors
. [FIX] Tests: Watermelon With Me uses new Chipmunk API
		Add new JS tests for Chipmunk (Buoyancy, Pyramid, Joints, etc...)
. [FIX] Texture: Improved assert when updating filter on NPOT textures
. [FIX] Windows: Toggle fullscreen does not reset whether or not to support touches (issue #1420)
. [FIX] Xcode: Fixed compiler warnigns
. [3RD] JS Bindings: Updated to v0.3
		Chipmunk API is compatible with Chipmunk-JS
		CocosBuilder Reader supports "outlets", Animation callbacks, and improved JSB API
		Better registration code
. [3RD] CocosBuilder Reader: Updated to v2.1

version 2.1-beta2 13-Sept-2012
. [NEW] Templates: Support for new iPhone5 resolution: Added Default-568h@2x.png in templates and cocos2d-ios.xcodeproj
. [FIX-MAC] LabelTTF works as expected on HiDPI / RetinaDisplay MacBooks
. [FIX] Templates: Mac Chipmunk template compiles OK
			Mac Templates don't include the 32-bit architecture
			Mac Temapltes use "current version" as new deploy OS version

version 2.1-beta 7-Sept-2012
. [NEW] DrawNode: Node that batches drawing primitives (replaces the drawing primitives free functions )
. [NEW] FileUtils: Added support for mac and retinaDisplay Mac suffix.
. [NEW] GL ES 2.0 code: General improvements in the shader and cache code. Better error reporting.
. [NEW] Javascript bindings for cocos2d, CocosDenshion, CocosBuilder Reader and Chipmunk.
			Includes Javascript remote console
			Removed old JSCocoa code and samples
			Uses Spidermonkey JS VM from Firefox 15.0