@@ -437,6 +437,11 @@ typedef void (*CC_UPDATE_PARTICLE_IMP)(id, SEL, tCCParticle*, CGPoint);
  */
 -(id) initWithDictionary:(NSDictionary*)dictionary;
 
+/** initializes a particle system from a NSDictionary and the path from where to load the png
+ @since v2.1
+ */
+-(id) initWithDictionary:(NSDictionary *)dictionary path:(NSString*)dirname;
+
 //! Initializes a system with a fixed number of particles
 -(id) initWithTotalParticles:(NSUInteger) numberOfParticles;
 //! stop emitting particles. Running particles will continue to run until they die
